--- a/suite/installer/package-manifest.in
+++ b/suite/installer/package-manifest.in
@@ -647,9 +647,6 @@
 @RESPATH@/res/table-remove-row-active.gif
 @RESPATH@/res/table-remove-row-hover.gif
 @RESPATH@/res/table-remove-row.gif
-@RESPATH@/res/ImageDocument.css
-@RESPATH@/res/TopLevelImageDocument.css
-@RESPATH@/res/TopLevelVideoDocument.css
 #ifdef XP_MACOSX
 @RESPATH@/res/cursors/*
 #endif
@@ -660,6 +657,9 @@
 #ifdef XP_MACOSX
 @RESPATH@/res/MainMenu.nib/
 #endif
+
+; Content-accessible resources.
+@RESPATH@/contentaccessible/*
 
 ; [Personal Security Manager]
 ;
