--- a/mail/installer/package-manifest.in
+++ b/mail/installer/package-manifest.in
@@ -511,6 +511,7 @@
 @RESPATH@/components/profiler.xpt
 #endif
 @RESPATH@/components/rdf.xpt
+@RESPATH@/components/reputationservice.xpt
 @RESPATH@/components/satchel.xpt
 @RESPATH@/components/saxparser.xpt
 @RESPATH@/components/shistory.xpt
