Port bug 1409707 to TB/IB/SM: Add Wayland DLL to package manifests. rs=bustage-fix

--- a/suite/installer/package-manifest.in
+++ b/suite/installer/package-manifest.in
@@ -130,6 +130,9 @@
 #endif
 #ifdef MOZ_GTK
 @BINPATH@/@DLL_PREFIX@mozgtk@DLL_SUFFIX@
+#ifdef MOZ_WAYLAND
+@BINPATH@/@DLL_PREFIX@mozwayland@DLL_SUFFIX@
+#endif
 #endif
 @RESPATH@/license.txt
 @RESPATH@/blocklist.xml
