--- a/suite/installer/package-manifest.in
+++ b/suite/installer/package-manifest.in
@@ -518,9 +518,9 @@
 @RESPATH@/chrome/toolkit@JAREXT@
 @RESPATH@/chrome/toolkit.manifest
 
-; [DevTools Shim Files]
-@RESPATH@/chrome/devtools-shim@JAREXT@
-@RESPATH@/chrome/devtools-shim.manifest
+; [DevTools Startup Files]
+@RESPATH@/chrome/devtools-startup@JAREXT@
+@RESPATH@/chrome/devtools-startup.manifest
 @RESPATH@/@PREF_DIR@/devtools-startup-prefs.js
 
 ; DevTools
