--- a/.eslintignore
+++ b/.eslintignore
@@ -23,8 +23,22 @@ build/**
 chat/**
 im/**
 ldap/**
-mail/**
 mailnews/**
+
+# mail exclusions
+mail/app/**
+mail/base/**
+mail/branding/**
+mail/config/**
+mail/extensions/**
+mail/installer/**
+mail/locales/**
+mail/test/**
+mail/themes/**
+
+# mail/components exclusions
+mail/components/*
+!mail/components/extensions
 
 # calendar/ exclusions
 
