--- a/mail/installer/package-manifest.in
+++ b/mail/installer/package-manifest.in
@@ -92,7 +92,7 @@
 #else
 @BINPATH@/@MOZ_CHILD_PROCESS_NAME@
 #endif
-#ifdef XP_WIN32
+#ifdef XP_WIN
 @BINPATH@/plugin-hang-ui@BIN_SUFFIX@
 #if MOZ_PACKAGE_MSVC_DLLS
 @BINPATH@/@MSVC_C_RUNTIME_DLL@
@@ -379,7 +379,7 @@
 
 ; Windows Search integration
 ; the module is included as part of the "Modules" rule
-#ifdef XP_WIN32
+#ifdef XP_WIN
 @RESPATH@/components/mailwinsearch.xpt
 @BINPATH@/WSEnable.exe
 #endif
@@ -395,7 +395,7 @@
 @RESPATH@/components/alerts.xpt
 ; accessibility (out of process API support)
 #ifdef ACCESSIBILITY
-#ifdef XP_WIN32
+#ifdef XP_WIN
 @BINPATH@/Accessible.tlb
 @BINPATH@/AccessibleHandler.dll
 @BINPATH@/AccessibleMarshal.dll
