--- a/suite/locales/Makefile.in
+++ b/suite/locales/Makefile.in
@@ -65,7 +65,7 @@ BOOKMARKS_INC_FILE = $(call MERGE_FILE,profile/bookmarks.inc)
 BOOKMARKS_XTRA_FILE = $(call MERGE_FILE,profile/bookmarks.extra)
 
 # the #include in the .in file requires all to be in the same dir, sadly.
-%/defaults/profile/bookmarks.html: $(BOOKMARKS_INC_FILE) $(BOOKMARKS_XTRA_FILE) generic/profile/bookmarks.html.in
+$(FINAL_TARGET)/defaults/profile/bookmarks.html: $(BOOKMARKS_INC_FILE) $(BOOKMARKS_XTRA_FILE) $(srcdir)/generic/profile/bookmarks.html.in
 	$(SYSINSTALL) -D $(dir $@)
 	$(RM) -rf profile/*bookmarks*
 	$(NSINSTALL) -D profile
@@ -78,7 +78,7 @@ BOOKMARKS_XTRA_FILE = $(call MERGE_FILE,profile/bookmarks.extra)
 PANELS_XTRA_FILE = $(call MERGE_FILE,profile/panels.extra)
 
 # the #include in the .in file requires all to be in the same dir, sadly.
-%/defaults/profile/panels.rdf: $(PANELS_XTRA_FILE) generic/profile/panels.rdf.in
+$(FINAL_TARGET)/defaults/profile/panels.rdf: $(PANELS_XTRA_FILE) $(srcdir)/generic/profile/panels.rdf.in
 	$(SYSINSTALL) -D $(dir $@)
 	$(RM) -rf profile/panels*
 	$(NSINSTALL) -D profile
