Bug 1762733 - Port bug 1706452: Package libmozgtk.so for Linux builds. r=me a=me

--- a/suite/installer/package-manifest.in
+++ b/suite/installer/package-manifest.in
@@ -129,6 +129,7 @@
 @BINPATH@/@DLL_PREFIX@mozavcodec@DLL_SUFFIX@
 #endif
 #ifdef MOZ_GTK
+@BINPATH@/@DLL_PREFIX@mozgtk@DLL_SUFFIX@
 #endif
 @RESPATH@/license.txt
 @RESPATH@/blocklist.xml
