--- a/.gecko_rev.yml
+++ b/.gecko_rev.yml
@@ -1,6 +1,6 @@
 ---
-GECKO_BASE_REPOSITORY: https://hg.mozilla.org/mozilla-unified
-GECKO_HEAD_REPOSITORY: https://hg.mozilla.org/mozilla-central
+GECKO_BASE_REPOSITORY: https://foss.heptapod.net/seamonkey/mozilla-release
+GECKO_HEAD_REPOSITORY: https://foss.heptapod.net/seamonkey/mozilla-release
 GECKO_HEAD_REF: default
 
 ### For comm-central
