Bug 1797696 - Get accurate system version info on all macOS builds. r=IanN a=IanN See Bug 1690604.

--- a/suite/app/macbuild/Contents/Info.plist.in
+++ b/suite/app/macbuild/Contents/Info.plist.in
@@ -32,6 +32,8 @@
 	<dict>
 		<key>MallocNanoZone</key>
 		<string>0</string>
+		<key>SYSTEM_VERSION_COMPAT</key>
+		<string>0</string>
 	</dict>
 	<key>LSMinimumSystemVersion</key>
 	<string>10.9.0</string>
