--- a/mail/installer/Makefile.in
+++ b/mail/installer/Makefile.in
@@ -174,4 +174,4 @@ package-compare:: $(MOZ_PKG_MANIFEST)
 
 # Overwrite the one made by Firefox with our own.
 make-sourcestamp-file::
-	$(PYTHON) $(commtopsrcdir)/build/source_repos.py gen_sourcestamp > $(MOZ_SOURCESTAMP_FILE)
+	$(PYTHON3) $(commtopsrcdir)/build/source_repos.py gen_sourcestamp > $(MOZ_SOURCESTAMP_FILE)
