--- a/mail/test/mozmill/Makefile.in
+++ b/mail/test/mozmill/Makefile.in
@@ -23,7 +23,7 @@ mozmill-virtualenv: $(_DEST_DIR)
 	rm -rf $(VIRTUALENV_DIR) && \
 	mkdir $(VIRTUALENV_DIR) && \
 	unset MACOSX_DEPLOYMENT_TARGET && \
-	$(PYTHON) $(_DEST_DIR)/resources/installmozmill.py $(VIRTUALENV_DIR) $(moztopsrcdir)/testing/mozbase
+	$(PYTHON3) $(_DEST_DIR)/resources/installmozmill.py $(VIRTUALENV_DIR) $(moztopsrcdir)/testing/mozbase
 
 libs:: mozmill-virtualenv
 
